# pressure_pad

./: README.md
DenoisingAutoencoder_OLD/: dataset_equalizer.ipynb  denoising_autoencoder.ipynb  pressure_pad_data.ipynb  pressure_pad_python_heatmap.ipynb  pressure_pad_study.db
DenoisingAutoencoder_OLD/6x6/: autoencoder.ipynb  best_autoencoder.pth  cnn.ipynb  denoising_autoencoder_6x6.ipynb
DenoisingAutoencoder_OLD/no_touch_set/: no_touch_0.npy  no_touch_1.npy  no_touch_10.npy  no_touch_100.npy  no_touch_101.npy  no_touch_102.npy  no_touch_103.npy  no_touch_104.npy  no_touch_105.npy  no_touch_106.npy  no_touch_107.npy  no_touch_108.npy  no_touch_109.npy  no_touch_11.npy  no_touch_110.npy  no_touch_111.npy  no_touch_112.npy  no_touch_113.npy  no_touch_114.npy  no_touch_115.npy  no_touch_116.npy  no_touch_117.npy  no_touch_118.npy  (+578 more)
PCB/: pressure_pad.kicad_pcb  pressure_pad.kicad_prl  pressure_pad.kicad_pro  pressure_pad.kicad_sch
PressurePadApp/: CMakeLists.txt  PressurePadApp.ino  filelist.txt  ui.c  ui.h  ui_Historic_Data.c  ui_Historic_Data.h  ui_Home_Page.c  ui_Home_Page.h  ui_Live_Data.c  ui_Live_Data.h  ui_Live_Data_Overview.c  ui_Live_Data_Overview.h  ui_font_Futura_Bold_56.c  ui_font_Futura_Book.c  ui_font_Futura_Book_26.c  ui_helpers.c  ui_helpers.h  ui_img_1401728645.c  ui_img_1485633761.c  ui_img_1671086701.c  ui_img_1742220310.c  ui_img_1845464892.c  ui_img_1953993994.c  ui_img_509871886.c  ui_img_690597470.c  ui_img_896003668.c  ui_img_988524616.c  ui_img_historicdataiconsmall_png.c  ui_img_livedataiconsmall_png.c  ui_themes.c  ui_themes.h
(+3414 files in other folders)
